[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qiskit-qubex-provider"
version = "0.1.0"
description = "Qiskit provider for Qubex targets and hardware execution"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [{ name = "Akinori Machino" }]
dependencies = [
    "qiskit>=2.0",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
qiskit-qubex-device-topology = "qiskit_qubex_provider.device_topology:main"

[project.optional-dependencies]
qubex = []
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["qiskit_qubex_provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
